# QuickImport

./: .gitignore  CMakeLists.txt  QuickImport.pro  QuickImportLogo-1024.icns  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  devicelist.cpp  devicelist.h  externDriveFetcher.mm  externalDriveFetcher.h  filecopydialog.cpp  filecopydialog.h  filecopydialog.ui  filecopyworker.cpp  filecopyworker.h  fileinfomodel.cpp  fileinfomodel.h  filelistmodel.cpp  filelistmodel.h  filesmodel.cpp  filesmodel.h  hotplugwatcher.h  icons.qrc  imageloader.cpp  imageloader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metadatadialog.cpp  metadatadialog.h  metadatadialog.ui  metadatatemplatedialog.cpp  metadatatemplatedialog.h  metadatatemplatedialog.ui  presetdialog.cpp  presetdialog.h  presetdialog.ui  presetlistmodel.cpp  (+15 more)
qdevicewatcher/: qdevicewatcher.cpp  qdevicewatcher_mac.cpp
